--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -99,6 +99,11 @@ h6 {
   margin: 0;
   padding: 0;
 }
+.masthead h2 {
+  font-size: 3rem;
+  margin: 0;
+  padding: 0;
+}
 
 @media (min-width: 992px) {
   .masthead {
